--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<!--/.preloader-->
 
-		<header id="home">
+		<header id="home" class="parallax">
 			<div class="main-nav">
 				<div class="container">
 					<div class="navbar-header">
@@ -41,7 +41,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="index.html"> <img class="img-responsive" src="images/logo.png" alt="logo"></a>
+						<a class="navbar-brand" href="#"> <img class="img-responsive" src="images/logo.png" alt="logo"></a>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
@@ -55,10 +55,13 @@
 								<a href="#portfolio">Teams</a>
 							</li>
 							<li class="scroll">
-								<a href="#team">Leaders</a>
+								<a href="#portfolio-single-wrap">Leaders</a>
 							</li>
 							<li class="scroll">
-								<a href="#contact">Contact Us</a>
+								<a href="#tes">Achievements</a>
+							</li>
+							<li class="scroll">
+								<a href="#asd">Contact Us</a>
 							</li>
 						</ul>
 					</div>
@@ -208,7 +211,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-krai.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/1.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -231,7 +234,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-amv.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/2.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -254,7 +257,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-auav.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/3.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -277,7 +280,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-roket.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/4.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -300,7 +303,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-battle.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/5.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -323,7 +326,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-krsti.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/6.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -346,7 +349,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-beroda.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/7.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -369,7 +372,7 @@
 											</p>
 										</div>
 										<div class="folio-overview">
-											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single.html" ><i class="fa fa-link"></i></a></span>
+											<span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio-single-berkaki.html" ><i class="fa fa-link"></i></a></span>
 											<span class="folio-expand"><a href="images/portfolio/8.jpg" data-lightbox="portfolio"><i class="fa fa-search-plus"></i></a></span>
 										</div>
 									</div>
@@ -531,7 +534,10 @@
 					</div>
 				</div>
 			</div>
+
 		</section><!--/#team-->
+		
+					<section id="tes" class="tes"></section>
 
 		<section id="features" class="parallax">
 			<div class="container">
@@ -566,6 +572,7 @@
 					</div>
 				</div>
 			</div>
+		<div id="asd"></div>
 		</section><!--/#features-->
 
 		<section id="contact">
@@ -576,7 +583,7 @@
 						<div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
 							<h2>Contact Us</h2>
 							<p>
-								For more information about projects, competition, or even open recruitment
+								For more information about competition or open recruitment, please fill form below<br>
 							</p>
 						</div>
 					</div>
@@ -613,7 +620,8 @@
 								<div class="contact-info wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
 									<ul class="address">
 										<li>
-											<i class="fa fa-map-marker"></i><span> Address:</span> Engineering Center, Fakultas Teknik Kampus Baru UI Depok
+											<i class="fa fa-map-marker"></i><span> Address:</span> 
+											Engineering Center, Fakultas Teknik Kampus Baru UI Depok
 										</li>
 										<li>
 											<i class="fa fa-phone"></i><span> Telp:</span> +62 819 0876 8994
@@ -635,8 +643,9 @@
 		<footer id="footer">
 			<div class="footer-top wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<div class="container text-center">
-					<div class="footer-logo">
-						<a href="index.html"><img class="img-responsive" src="images/trui.png" alt=""></a>
+					<div class="member-image">
+						<center><img class="img-responsive" src="images/trui.png" alt=""></center>
+						
 					</div>
 					<div class="social-icons">
 						<ul>
